--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
         "checkJs": true,
-        "target": "es2018"
+        "target": "es2018",
+        "types" : ["sinusbot-scripting-engine"]
     },
+    "typeAcquisition": {"enable": false, "include": ["sinusbot-scripting-engine"]},
     "exclude": [
         "node_modules",
         "**/node_modules/*"
