--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "bugs": {
     "url": "https://github.com/irgendwr/sinusbot-scripts/issues"
   },
-  "homepage": "https://github.com/irgendwr/sinusbot-scripts#readme",
+  "homepage": "https://github.com/irgendwr/sinusbot-scripts",
   "devDependencies": {
-    "sinusbot-scripting-engine": "^1.0.13"
-  }
+    "sinusbot-scripting-engine": "^1.0.18"
+  },
+  "dependencies": {},
+  "license": "MIT"
 }
